--- a/HTMLGraph/Graph.html
+++ b/HTMLGraph/Graph.html
@@ -20,7 +20,7 @@
 		
 		
 		<script type="text/javascript">
-			var chart1, title;        
+			var chart1;        
 			function loadChart()
 			{
 				chart1 = new cfx.Chart();
@@ -32,10 +32,7 @@
 				chart1.setDataSource(data);
 				var divHolder = document.getElementById('ChartDiv');
 				chart1.create(divHolder);
-				title = new cfx.TitleDockable();
-				title.setText(titleString);
-				chart1.getTitles().add(title);
-				
+				chart1.setTitle(null);	
 			}
 			
 		</script>
@@ -48,7 +45,7 @@
 	
 	
 	<body onload="loadChart()"> 
-		<div id="ChartDiv" style="width:100%;height:500px;display:inline-block"></div>
+		<div id="ChartDiv" style="width:100%;height:500px;top:-50px;display:inline-block;position:absolute"></div>
 	</body>
 	
 </html>
